<resources>
    <string name="app_name">SOTD</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Login & Sign Up -->
    <string name="emailUserId">Email / UserName</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="userName">User Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>


    <!--Facebook-->
    <string name="facebook_app_id">491784131214351</string>
    <string name="fb_login_protocol_scheme">fb491784131214351</string>

    <!--My Profile-->
    <string name="myPreferencesHeader">My Preferences</string>
    <string name="myPreferencesSubtitle">CHose who you\'d like to see</string>

    <string name="appSettingHeader">App Settings</string>
    <string name="appSettingSubtitle">Manage Privacy , Notifications</string>

    <string name="inviteHeader">Invite Friends</string>
    <string name="inviteSubtitle">Invite friends and enjoy more</string>
    <string name="title_activity_app_setting">AppSetting</string>

    <!--Bottom Navogation Values-->
    <string name="leaderBoard">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
</resources>
