<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/ic_add_a_photo_black_24dp"
        android:title="@string/upload" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/mind_map"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/leaderboard_icon"
        android:title="@string/leaderBoard" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_36dp"
        android:title="@string/profile" />

</menu>
