<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@null"
    android:orientation="vertical"
    tools:context="layout.Registration">

    <ScrollView
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_centerInParent="true"
    android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_centerHorizontal="true"
                android:layout_width="100dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/myLogo"
                android:layout_marginTop="16dp"
                android:src="@drawable/my_logo1"
                android:layout_height="100dp" />
            <LinearLayout
                android:id="@+id/idLayer"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="@dimen/InputEditTextSideMargin"
                    android:layout_marginStart="@dimen/InputEditTextSideMargin"
                    android:text="@string/name"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/InputEditTextHeight"
                    android:layout_marginEnd="@dimen/InputEditTextSideMargin"
                    android:layout_marginStart="@dimen/InputEditTextSideMargin"
                    android:background="@drawable/layout_bg">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:inputType="textPersonName"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="@dimen/InputEditTextSideMargin"
                    android:layout_marginStart="@dimen/InputEditTextSideMargin"
                    android:text="@string/userName"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/InputEditTextHeight"
                    android:layout_marginEnd="@dimen/InputEditTextSideMargin"
                    android:layout_marginStart="@dimen/InputEditTextSideMargin"
                    android:background="@drawable/layout_bg">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:inputType="text"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="@dimen/InputEditTextSideMargin"
                    android:layout_marginStart="@dimen/InputEditTextSideMargin"
                    android:text="@string/email"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/InputEditTextHeight"
                    android:layout_marginEnd="@dimen/InputEditTextSideMargin"
                    android:layout_marginStart="@dimen/InputEditTextSideMargin"
                    android:background="@drawable/layout_bg">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/InputEditTextSideMargin"
                android:layout_marginStart="@dimen/InputEditTextSideMargin"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/boy"
                    android:layout_centerVertical="true"
                    android:src="@drawable/boy"
                    android:layout_width="40dp"
                    android:layout_marginEnd="30dp"
                    android:layout_toLeftOf="@+id/gender"
                    android:layout_height="40dp" />

                <Switch
                    android:id="@+id/gender"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
android:layout_toRightOf="@+id/gender"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/girl"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="@dimen/InputEditTextSideMargin"
                    android:layout_marginStart="@dimen/InputEditTextSideMargin"
                    android:text="@string/password"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/InputEditTextHeight"
                    android:layout_marginEnd="@dimen/InputEditTextSideMargin"
                    android:layout_marginStart="@dimen/InputEditTextSideMargin"
                    android:background="@drawable/layout_bg">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="@dimen/InputEditTextSideMargin"
                    android:layout_marginStart="@dimen/InputEditTextSideMargin"
                    android:text="@string/confirmPassword"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/InputEditTextHeight"
                    android:layout_marginEnd="@dimen/InputEditTextSideMargin"
                    android:layout_marginStart="@dimen/InputEditTextSideMargin"
                    android:background="@drawable/layout_bg">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:maxLength="20"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_marginTop="25dp"
                android:layout_marginEnd="@dimen/InputEditTextSideMargin"
                android:layout_marginStart="@dimen/InputEditTextSideMargin"
                android:text="@string/registration"
                android:textColor="@color/Light_White"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:background="@drawable/layer_background_light_wight"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

