<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="layout.Profile">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                app:cardMaxElevation="5dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp"
                android:layout_marginBottom="10dp"
                android:layout_height="250dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/gradient_test1"
                    android:layout_height="match_parent">
                <android.support.v7.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:elevation="12dp"
                    android:id="@+id/view2"
                    app:cardCornerRadius="40dp"
                    android:layout_marginTop="50dp"
                    android:layout_centerHorizontal="true"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9">
                    <ImageView
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:id="@+id/profile"
                        android:scaleType="centerCrop"
                        android:src="@drawable/scene3"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true">
                    </ImageView>
                </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/view2"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:id="@+id/name"
                        android:textSize="22sp"
                        android:text="Niraj Solanki"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <RelativeLayout
                android:id="@+id/inviteLayer"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:id="@+id/inviteIcon"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_dashboard_black_24dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:layout_marginStart="30dp"
                    android:id="@+id/inviteHeader"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/inviteIcon"
                    android:layout_width="wrap_content"
                    android:text="@string/inviteHeader"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_below="@id/inviteHeader"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="30dp"
                    android:id="@+id/inviteSubtitle"
                    android:layout_toEndOf="@+id/inviteIcon"
                    android:layout_width="wrap_content"
                    android:text="@string/inviteSubtitle"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/inviteButton"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="5dp"
                android:background="@color/GreyLikeAccent"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"/>
            <RelativeLayout
                android:id="@+id/appSettingLayer"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:id="@+id/appSettingIcon"
                    android:layout_marginStart="16dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_settings_black_36dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:layout_marginStart="30dp"
                    android:id="@+id/appSettingHeader"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/appSettingIcon"
                    android:layout_width="wrap_content"
                    android:text="@string/appSettingHeader"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_below="@id/appSettingHeader"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="30dp"
                    android:id="@+id/appSettingSubtitle"
                    android:layout_toEndOf="@+id/appSettingIcon"
                    android:layout_width="wrap_content"
                    android:text="@string/appSettingSubtitle"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/appSettingButton"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="5dp"
                android:background="@color/GreyLikeAccent"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"/>
            <RelativeLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
<ImageView
    android:id="@+id/logout_icon"
    android:layout_centerHorizontal="true"
    android:src="@drawable/logout_icon"
    android:layout_width="40dp"
    android:layout_height="40dp" />
                <TextView
                    android:textColor="@color/red"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/logout_icon"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:text="Logout"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
